<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Giris_Activity">

    <include layout="@layout/actionbar"
    android:id="@+id/actbargiris"/>

    <TextView
        android:id="@+id/txt_girisyap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:text="@string/txt_girisyap"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/txt_email_giris"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_girisyap"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/txt_email" />

    <EditText
        android:id="@+id/txtplain_email_giris"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_email_giris"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:text="@string/txtplain_email" />

    <TextView
        android:id="@+id/txt_sifre_giris"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtplain_email_giris"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/txt_sifre" />

    <EditText
        android:id="@+id/txtplain_sifre_giris"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_sifre_giris"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:text="@string/txtplain_password"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/btn_create_new_account"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:backgroundTint="#03A9F4"
        android:text="@string/btn_girisyap"
        android:textColor="@color/white" />

</RelativeLayout>