<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03A9F4"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/txt_uygulama_isim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/txt_uygulama_isim"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_hesap_olustur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_hesabim_var"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/orange"
        android:text="@string/txt_hesap_olustur"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_hesabim_var"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/img_chat_logo"
        android:backgroundTint="#FFC107"
        android:layout_marginTop="80dp"
        android:text="@string/btn_hesabim_var"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/img_chat_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/txt_uygulama_isim"
        android:contentDescription="TODO"
        app:srcCompat="@drawable/chat_logo" />


</RelativeLayout>