<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/kullanicilar_profil_resmi"
            android:src="@drawable/person"
            android:layout_width="80dp"
            android:layout_height="80dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/kullanici_profil_adi"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/ark_kullanici_adi"
                    android:textAlignment="textStart"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/kullanici_cevrimici_olma_durumu"
                    android:src="@drawable/ic_baseline_brightness_1_24"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:visibility="invisible"
                    android:contentDescription="TODO" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/kullanici_durumu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/txt_kullanici_durumu_goster"
                    android:textAlignment="textStart"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/talep_kabul_buttonu"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:background="@android:color/holo_green_light"
                    android:text="@string/btn_kabul"
                    android:textAllCaps="false"
                    android:textColor="@android:color/background_light"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/talep_iptal_buttonu"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="15dp"
                    android:background="@android:color/holo_red_dark"
                    android:text="@string/btn_iptal"
                    android:textAllCaps="false"
                    android:textColor="@android:color/background_light"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:visibility="invisible"
                    />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>