<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatActivity">

    <LinearLayout
        android:id="@+id/yukari_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#03A9F4"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/sohbetsayfasina_gonderme_resmi"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_arrow_back_black_24dp"
            tools:ignore="ImageContrastCheck" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/kullanici_adi_gosterme_chat_activity"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_chat_isim"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/kullanici_durumu_gosterme_chat_activity"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_son_gorulme"
                android:textColor="@android:color/background_light" />


        </LinearLayout>


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/kullanicilar_profil_resmi_chat_activity"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/person" />


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/kullanicilarin_ozel_mesajlarinin_listesi"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/chat_linear_layout"
        android:layout_below="@id/yukari_bar">

    </androidx.recyclerview.widget.RecyclerView>

    <RelativeLayout
        android:id="@+id/chat_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:background="@android:color/background_light"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/dosya_gonderme_btn"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:backgroundTint="@android:color/white"
            android:minHeight="48dp"
            android:src="@drawable/ic_attach_file_black_24dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/girilen_mesaj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/mesaj_gonder_btn"
            android:layout_toRightOf="@+id/dosya_gonderme_btn"
            android:hint="@string/txt_mesaj_girin"
            android:maxLines="5"
            android:padding="14sp"
            android:textColorHint="#757575"
            android:textSize="16sp"
            tools:text="@string/txt_girilen_mesaj"
            android:autofillHints=""
            android:inputType="text" />

        <ImageButton
            android:id="@+id/mesaj_gonder_btn"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@android:color/white"
            android:minHeight="48dp"
            android:src="@drawable/ic_baseline_send_24"
            tools:ignore="SpeakableTextPresentCheck" />


    </RelativeLayout>


</RelativeLayout>